Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-05-24 Kimmo
 PATCH: [ 1493742 ] Limit vertical scrolling to last line of files
  Src/editlib: ccrystaltextview.cpp
 PATCH: [ 1493868 ] Add bookmark by double-clicking selection frame
  Src/editlib: ccrystaltextview.cpp ccrystaltextview.h ccrystaltextview2.cpp
 PATCH: [ 1492458 ] Swedish translation update for 2.5.4.0
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc
 Add some const keywords and fix comments, remove unused function.
  Src: DiffList.cpp DiffList.h
 BUG: [ 1488797 ] ASSERT in CMergeEditView::OnPrevdiff
  Fix from Mallato
  Src: MergeEditView.cpp

2006-05-23 Tim
 PATCH: [ 1493713 ] Translate 'Bookmarks' feature to German
  Src/Languages/German: MergeGerman.rc

2006-05-23 Kimmo
 PATCH: [ 1491436 ] Spanish Readme.txt
  Submitted by Jesus M. Delgado 'Mack'
  Docs/Users/Languages new file: ReadMe-Spanish.txt
  InnoSetup: WinMerge.iss

2006-05-22 Gal
 PATCH: [ 1491993 ] Ability to rename files (RFE 1380228)
  Src: DirActions.cpp DirView.cpp DirView.h Merge.rc resource.h 

2006-05-22 Kimmo
 PATCH: [ 1491212 ] Czech Translation
  Submitted by: Jan Hryz
  Src/Languages/Czech/MergeCzec.rc
 PATCH: [ 1492025 ] Catalan translation update
  Submitted by Jordi Vilar
  Src/Languages/Catalan: MergeCatalan.rc
 PATCH: [ 1491424 ] Spanish translation for v2.5.3.7
  Submitted by Jesus M. Delgado 'Mack'
  Languages/Spanish: MergeSpanish.rc

2006-05-18 WinMerge beta release 2.5.4

2006-05-18 Kimmo
 PATCH: [ 1490540 ] Manual: add picture and explanation about our version tree
  Docs/Users/Manual: Introduction.xml
  Docs/Users/Manual/build: build_html.bat build_htmlhelp.bat
  Docs/Users/Manual/Art new files: WinMerge_versions.gif WinMerge_versions.odg

2006-05-17 Kimmo
 PATCH: [ 1489824 ] Better default folder for user filters
  Src: MainFrm.cpp
 BUG: [ 1445975 ] BuildDll.bat exit is not good
  Src/Languages: BuildDll.bat